--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,17 @@ Build-Depends: debhelper (>= 8.0.0), cmake, pkg-config,
  libbz2-dev, libpcre3-dev,
  libcoin80-dev, libsoqt4-dev,
  libode-dev,
- libann-dev, libqhull-dev,
+ libann-dev,
+ libqhull-dev,
+ libmpfi-dev,
+ libgmp,
  libassimp-dev,
- liboctave-dev,
+ collada-dom2.4-dp-dev,
+ collada-dom-dev,
  libavcodec-dev, libavformat-dev, libswscale-dev,
- python-dev, python-numpy, python-sympy,
+ python-dev,
+ python-numpy,
+ python-sympy,
  libboost1.54-dev,
  libboost-date-time1.54-dev,
  libboost-filesystem1.54-dev,
@@ -23,7 +29,14 @@ Build-Depends: debhelper (>= 8.0.0), cmake, pkg-config,
  libboost-regex1.54-dev,
  libboost-system1.54-dev,
  libboost-thread1.54-dev,
- libxml2-dev, libopenscenegraph-dev
+ libboost-wave1.54-dev,
+ libxml2-dev,
+ libopenscenegraph-dev,
+ libopenthreads-dev,
+ zlib1g-dev,
+ liblog4cxx10-dev,
+ libbullet2.82-dev,
+ libpcre++-dev
 
 Package: pr-openrave
 Architecture: any
@@ -32,8 +45,12 @@ Depends:
  libbz2-1.0, libpcre3, libpcrecpp0,
  libcoin80, libsoqt4-20,
  libode1,
- libann0, libqhull6,
+ libann0,
+ libqhull6,
+ libmpfi0,
+ libgmp-dev,
  libassimp3,
+ collada-dom2.4-dp-base,
  libavcodec54 | libavcodec-extra-54,
  libavformat54 | libavformat-extra-54,
  libswscale2 | libswscale-extra-2,
@@ -45,7 +62,14 @@ Depends:
  libboost-regex1.54.0,
  libboost-system1.54.0,
  libboost-thread1.54.0,
- libxml2, libopenscenegraph99
+ libboost-wave1.54.0,
+ libxml2,
+ libopenscenegraph99,
+ libopenthreads14,
+ zlib1g,
+ liblog4cxx10,
+ libbullet2.82,
+ libpcre++0
 Replaces:
  openrave-minimal,
  openrave-python-minimal,
