Fixed CMake flags.

--- a/debian/rules
+++ b/debian/rules
@@ -13,5 +13,5 @@ export DEB_PYTHON2_MODULE_PACKAGES=openravepy
 	dh $@ --with=python2
 
 override_dh_auto_build:
-	cmake -DCMAKE_INSTALL_PREFIX=/usr -DOPT_DOUBLE_PRECISION=ON -DOPT_BULLET=OFF -DOPENRAVE_PLUGIN_CONFIGURATIONCACHE=OFF -DOPT_BUILD_PACKAGE_DEFAULT=ON .
-	make -j4
+	cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=/usr -DOPT_BULLET=OFF -DOPT_FCL_COLLISION=OFF
+	make
