--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,5 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 export DH_VERBOSE=1
 export DEB_PYTHON2_MODULE_PACKAGES=openravepy
@@ -13,5 +8,5 @@ export DEB_PYTHON2_MODULE_PACKAGES=openravepy
 	dh $@ --with=python2
 
 override_dh_auto_build:
-	cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=/usr -DOPT_BULLET=OFF -DOPT_FCL_COLLISION=OFF -DOPENRAVE_PLUGIN_IKFASTSOLVERS=OFF
+	cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=/usr -DOPT_BULLET=OFF -DOPT_FCL_COLLISION=OFF
 	make
