--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Build-Depends: debhelper (>= 8.0.0), cmake, pkg-config,
  zlib1g-dev,
  liblog4cxx10-dev,
  libpcre++-dev,
- liblapacke-dev
+ liblapack-dev,
 
 Package: pr-openrave
 Architecture: any
@@ -66,7 +66,7 @@ Depends:
  zlib1g,
  liblog4cxx10,
  libpcre++0,
- liblapacke
+ liblapack3
 Replaces:
  openrave-minimal,
  openrave-python-minimal,
